[package]
name = "web-compress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = "=0.2.74"
yew = { git = "https://github.com/yewstack/yew/" }
gloo-file = "0.2"
gloo = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["File", "CanvasRenderingContext2d", "ImageData", "HtmlCanvasElement", "HtmlAnchorElement"]

[dependencies.image]
version = "0.23.14"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]

[dependencies.zip]
version = "0.5.13"
default-features = false
